# mgfx

./: .gitignore  CMakeLists.txt  LICENSE
examples/: CMakeLists.txt
examples/hello/: CMakeLists.txt  main.cpp
examples/simple_lines/: CMakeLists.txt  main.cpp
mgfx/: CMakeLists.txt
mgfx/inc/: mgfx.h  mgfx_app.h  mgfx_context.h  mgfx_math.h  mgfx_scene.h  mgfx_types.h
mgfx/src/: config.h  main.cpp  mgfx.cpp
mgfx/src/dx12/: command_fence.cpp  command_fence.h  command_pool.cpp  command_pool.h  command_queue.cpp  command_queue.h  common.h  context.cpp  context.h  descriptor_span.h  device.cpp  device.h  gpu_descriptor_heap.cpp  gpu_descriptor_heap.h  scene.cpp  scene.h  swap_chain.cpp  swap_chain.h
